objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Users (Teacher)</relationshipLabel>
        <relationshipName>Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher_profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher profile</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Parent__c</columns>
        <columns>Teacher__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>Parent__c</columns>
        <columns>Teacher__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Group__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Kid</value>
        </filters>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Kid</fullName>
        <active>true</active>
        <label>Kid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <label>Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>